[package]
name = "ambient_proxy_manager"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "Simple manager for Ambient Proxy"
repository = "https://github.com/Ambient/AmbientProxyManager"
keywords = ["ambient", "game-development", "networking", "proxy", "nat-traversal"]
categories = ["game-development"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ambient_proxy_manager"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["headers"] }
maxminddb = "0.23.0"
parking_lot = "0.12.1"
prometheus-client = "0.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "fs"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
